[package]
name = "html_hasher"
version = "0.1.1"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/html_hasher"
license = "MIT"
description = "hashes script and stylesheet files referenced html files and rewrites the reference to the hashed name"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
structopt = { version = "0.3" }
lol_html = "0.3"
